--- a/src/components/editor/aq-editor-edit-programmer.html
+++ b/src/components/editor/aq-editor-edit-programmer.html
@@ -70,6 +70,10 @@
         --paper-tabs-selection-bar-color: teal;
         height:90%;
     }
+    
+    text-area {
+      left:-120 !important;
+    }
 
 </style>
 
@@ -77,9 +81,9 @@
 
   <template>
   
-      <paper-drawer-panel drawer-width='370px' responsive-width='730px' class="drawerpanel" id="drawerpanel" right-drawer force-narrow="{{!showSideBar}}">
+      <paper-drawer-panel drawer-width='370px' responsive-width='1130px' class="drawerpanel" id="drawerpanel" right-drawer force-narrow="{{!showSideBar}}">
        <div main> 
-        <juicy-ace-editor style="height:100%;" theme="ace/theme/xcode" mode="ace/mode/julia" fontsize="13px" id="code-editor" wrapmode tabsize="4">
+        <juicy-ace-editor style="height:100%;" theme="ace/theme/xcode" mode="ace/mode/julia" fontsize="14px" id="codeEditor" tabsize="4">{{code}}
         </juicy-ace-editor>  
         </div>
 
@@ -116,14 +120,22 @@
           type:Boolean,
           value:true,
         },
+
         selectedSideBar:{
           type:Number,
           value:0,
         },
+
         sideBarOpen:{
           type:Boolean,
           value:true,
-        }
+        },
+
+        code: String,
+      },
+
+      listeners :{
+        'editor-ready':'setCode',
       },
 
       toggleDrawer() {
@@ -149,6 +161,10 @@
           this.showSideBar = false;
         }
       }, 
+
+      getCodeContent() {
+        return this.$.codeEditor.value; 
+      },     
 
     });
   </script>
