--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -92,6 +92,21 @@
 			padding: 10px;
 		}
 
+		.iconButton {
+			--paper-icon-button-disabled-text:#f2d9D9;
+		}
+
+		paper-icon-button {
+			--paper-icon-button-disabled:{
+				--background-color: #f2d9D9 !important;
+				color: #cacaca !important;
+			};
+		}
+		paper-icon-button {
+			--paper-icon-button-disabled-text:grey;
+		}
+		
+
 
 		
 	</style>
@@ -108,13 +123,13 @@
         	</div>
 
 	      	<div id='menu-icons' class="layout horizontal">
-	      		<paper-icon-button noink class="iconButton" title="Search" icon="icons:search" on-tap="toggle">	
+	      		<paper-icon-button noink class="iconButton" title="Search" icon="icons:search" on-tap="toggle" raised>	
 	      		</paper-icon-button>
 
 	      		<paper-icon-button noink class="iconButton" title="New" icon="icons:add" on-tap="createNew">	
 	      		</paper-icon-button>
 
-	  			<paper-icon-button noink class="iconButton" title="Delete" icon="icons:delete" on-tap="onDelete">
+	  			<paper-icon-button noink class="iconButton" title="Delete" icon="icons:delete" on-tap="onDelete" disabled="[[!activeDelete]]">
 	  			</paper-icon-button>
 
 				<paper-icon-button noink class="iconButton" title="Compare" icon="icons:chrome-reader-mode" on-tap="onCompare">
@@ -127,6 +142,13 @@
 	<script>
 		Polymer ({
 			is: 'aq-editor-home-menu',
+
+			properties :{
+				activeDelete: {
+					type:Boolean,
+					value:false,
+				},
+			},
 
 			toggle() {
 
@@ -144,15 +166,15 @@
 			},
 
 			onDelete() {
-				this.fire('deletePressed');
+				this.fire('deleteClicked');
 			},
 
 			createNew() {
-				this.fire('newPressed');
+				this.fire('newClicked');
 			},
 
 			onCompare() {
-				this.fire('comparePressed');
+				this.fire('compareClicked');
 			},
 
 			checkForKeys: function (e) {
