--- a/src/layouts/aq-dashboard-main.html
+++ b/src/layouts/aq-dashboard-main.html
@@ -63,7 +63,7 @@
           <app-route path="/dashboard/editor" element="aq-editor-main" bindrouter=""></app-route>
           <app-route path="/dashboard/editor/*" element="aq-editor-main" bindrouter=""></app-route>
 
-          <app-route path="/dashboard/analyze" element="aq-analyze-main" bindrouter=""></app-route>
+          <!--app-route path="/dashboard/analyze" element="aq-analyze-main" bindrouter=""></app-route-->
           <app-route path="/dashboard/analyze/*" element="aq-analyze-main" bindrouter=""></app-route>
 
           <app-route path="/dashboard/analyze/compare/*" element="aq-analyze-main" bindrouter=""></app-route>
