--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -18,7 +18,7 @@
     #container {
       margin-top: 20px;
       width:90%;
-      margin-left: 30px;
+      margin-left: 0 auto;
       color: #333a56;
     }
 
