--- a/src/components/editor/aq-editor-home.html
+++ b/src/components/editor/aq-editor-home.html
@@ -3,9 +3,6 @@
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 <link rel='import' href='../../../bower_components/iron-collapse/iron-collapse.html'>
 <link rel='import' href='../../../bower_components/iron-ajax/iron-ajax.html'>
-
-<link rel='import' href='../../../bower_components/iron-ajax/iron-ajax.html'>
-
 <link rel='import' href='./aq-editor-home-elementmenu.html'>
 <link rel='import' href='./aq-editor-home-menu.html'>
 <link rel='import' href='./aq-editor-home-strategy-item.html'>
@@ -14,7 +11,6 @@
 <link rel='import' href='../../dialog/aq-delete-dialog.html'>
 <link rel='import' href='../../dialog/aq-editor-strategy-input-dialog.html'>
 <link rel='import' href='../../dialog/aq-editor-strategy-compare-dialog.html'>
-<link rel='import' href='../../dialog/aq-editor-strategy-preview-dialog.html'>
 
 
 <dom-module id="aq-editor-home">
@@ -36,6 +32,7 @@
         font-weight: bold;
         border-bottom: 1px solid #e5e5e5;
         background-color:#99ced4;
+
       }
 
       :host([narrow-viewport]) .header .description {
@@ -51,12 +48,14 @@
       }
 
       .name {
-        min-width:250px;
+        width:300px;
         font-weight: bold;
+        margin-right: 30px;
       }
 
       .description {
-      	min-width: 350px;
+      	width: 350px;
+      	margin-right: 30px;
       }
 
       .backtest {
@@ -72,11 +71,6 @@
         display: inline;
       }
 
-      #actions aq-editor-home-elementmenu{
-        right: 0;
-        margin-right:50px;
-      }
-
       .toolbar {
       	height:60px;
       }
@@ -88,15 +82,20 @@
       	width: 90%;
 
       }
+
+      #actions aq-editor-home-elementmenu {
+        right: 5%;
+      }
+
 }
 
     </style>
 
 	<template>
  		<div id='container'>
-	  		<aq-editor-home-menu></aq-editor-home-menu>
+	  		<aq-editor-home-menu active-delete="[[hasCheckedStrategies(checkedCount)]]"></aq-editor-home-menu>
 
-		    <div class="header" on-mouseover='_mouseOver' on-mouseout='_mouseLeave'>
+		    <div class="header flex" on-mouseover='_mouseOver' on-mouseout='_mouseLeave'>
 		      <div class="name">Name<span class="narrow">/Description</span></div>
 		      <div class="description">Description</div>
 		      <div class="backtest">#Backtests</div>
@@ -113,19 +112,7 @@
                   debounce-duration="300">
             </iron-ajax>
 		    
-		    <!--template is="dom-repeat" items="[[elements]]">
-		      <div class="row" data-index$="[[index]]"-->
-		    
-	        <!--div class="row">
-		      	<paper-checkbox noink></paper-checkbox>
-		        <a href$="">
-		          <div class="name">Sample Strategy</div>  
-		          <div class="description">Sample strategy description to test the UI</div>
-		          <div class="backtest">5</div>
-		        </a>
-		    </div-->
-		    
-	    	<template is="dom-repeat" items="[[strategies]]">
+	    	<template is="dom-repeat" items="{{strategies}}" id='strategyList'>
 	    		<aq-editor-home-strategy-item strategy-name = "[[item.name]]"
 	    									num-backtest = "[[item.backtests.length]]"
 	    									strategy-desc = "[[item.description]]"
@@ -133,41 +120,21 @@
 	    									>
 				</aq-editor-home-strategy-item>	
 	    	</template>
-		   
-		    <!--aq-editor-home-strategy-item id='strategyItem1'></aq-editor-home-strategy-item>
-		    <aq-editor-home-strategy-item id='strategyItem2'></aq-editor-home-strategy-item>
-		    <aq-editor-home-strategy-item id='strategyItem3'></aq-editor-home-strategy-item>
-		    <aq-editor-home-strategy-item id='strategyItem4'></aq-editor-home-strategy-item>
-		    <aq-editor-home-strategy-item id='strategyItem5'></aq-editor-home-strategy-item-->
-		    
+	
 
 		    <aq-delete-dialog id ="dialog" heading="Delete Strategies"
-		    						 message="Are you sure to delete {{numStrategiesSelected}}?"	
+		    						 message="Are you sure to delete {{checkedCount}} strategies?"	
 		    						 cancel="Cancel"
 		    						 accept="OK">
 	    	</aq-delete-dialog>
 
-	    	<aq-editor-strategy-input-dialog id="strategyInputDialog">
-	    	</aq-editor-strategy-input-dialog>	
-
+	    	
 	    	<aq-editor-strategy-compare-dialog id="strategyCompareDialog"></aq-editor-strategy-compare-dialog>
 
 	    	<aq-editor-strategy-preview-dialog id="strategyPreviewDialog"></aq-editor-strategy-preview-dialog>
 		    
 		    <div id="actions"></div>
 		</div> 
-
-		<iron-ajax 
-			url="http://localhost:3002/api/v2/strategy" 
-			body="[[strategyData]]" 
-			method='POST' 
-			id='postStrategy' 
-			headers='{{header}}' 
-			handle-as="json" 
-			on-response="onStrategyCreation" 
-			last-response="{{ajaxResponse}}" 
-			debounce-duration="300">
-		</iron-ajax>
 
   </template>
 
@@ -177,26 +144,49 @@
 		is: 'aq-editor-home',
 		
 		properties: {
-			elements: {
+			strategies: {
 				type: Array,
-				observer: '_elementsChanged'
+				//observer: '_strategiesChanged'
 			},
 			
 			color: { type: String },
+
+			checkedCount: {
+				type: Number,
+				value:0,
+			},
+
+			checkedItems: {
+				type:Object,
+				value:{},
+			},
 			
 			narrowViewport: {
 				type: Boolean,
 				reflectToAttribute: true
 			},
+
+			create: {
+				type:Number,
+				vaue:0,
+			},
+
+		},
+
+		attached() {
+			if (this.create == 1){
+				this.fire('newClicked');
+			}
 		},
 
 		ready: function() {
-                var x = localStorage.getItem('my-app-storage');
-                var user = JSON.parse(x).user;
-                this.header = {
-                    "aimsquant-token": user.token,
-                    "Content-Type": "application/json"
-            };
+            var x = localStorage.getItem('my-app-storage');
+            var user = JSON.parse(x).user;
+            this.header = {
+                "aimsquant-token": user.token,
+                "Content-Type": "application/json"
+        	};
+
         },
 
         onAllStrategies(data) {
@@ -204,18 +194,18 @@
         },
 
 		listeners: {
-			'tap': '_tap',
 			'mouseover': '_mouseOver',
 			'mouseleave': '_mouseLeave',
-			'deletePressed':'openDeletionDialog',
-			'newPressed':'openNewDialog',
-			'comparePressed':'openCompareDialog',
+			'deleteClicked':'openDeletionDialog',
+			'compareClicked':'openCompareDialog',
 			'previewClicked':'openPreview',
 			'analyzeClicked':'goToAnalyze',
 			'shareClicked':'goToShare',
 			'cloneClicked':'goToClone',
 			'editorClicked':'goToEditor',
-			'create-action':'createStrategy',
+			//'create-action':'createStrategy',
+			'check-action':'checkStrategy',
+			'delete-action':'onDeletion',
 		},
 
 		_currentRowIndex: -1,
@@ -229,23 +219,6 @@
 			return node;
 		},
 
-		_tap: function (e) {
-			var sourceEvent = e.detail.sourceEvent;
-			var A = this._findAncestor(e.target, function (node) {
-				return node != this && node.tagName !== 'A';
-			});
-
-			if (A && A.tagName === 'A' && A.href.indexOf(location.host) > 0) {
-				if (sourceEvent.ctrlKey || sourceEvent.metaKey) {
-				window.open(A.href);
-			} else {
-				this.fire('nav', { url: A.href });
-			}
-			
-			e.preventDefault();
-			}
-		},
-		
 		_mouseOver: function (e) {
 			var row = this._findAncestor(e.target, function (node) {
 				return node != this && !node.classList.contains('row') && node.id !== 'actions';
@@ -274,6 +247,7 @@
 				sharedActionMenu = this._sharedActionMenu;
 			}
 			sharedActionMenu.iconsOnly = true;
+			//sharedActionMenu.strategyId = this.
 			sharedActionMenu.element = "aa";//this.elements[index].name;
 			sharedActionMenu.style.top = rowOffsetTop + 'px';
 			this._layoutIfNeeded(sharedActionMenu);
@@ -291,7 +265,7 @@
 					sharedActionMenu.classList.add('hidden');
 				}
 				row.classList.remove('hover');
-				//this._currentRowIndex = -1;
+				this._currentRowIndex = -1;
 				this._currentRow = null;
 			}
 		},
@@ -319,10 +293,6 @@
 			this.$.dialog.open();
 		},
 
-		openNewDialog() {
-			this.$.strategyInputDialog.open();
-		},
-
 		openCompareDialog() {
 			this.$.strategyCompareDialog.open();
 		},
@@ -336,44 +306,67 @@
 		},
 
 	 	goToAnalyze() {
-        	this.router.go('/dashboard/analyze?strategyName=OLMAR')
+        	strategyId = this._currentRow.id;
+        	strategyName="";
+        	for (i in this.strategies) {
+        		if(strategyId == this.strategies[i]._id) {
+        			strategyName = this.strategies[i].name;
+        			break;
+        		}
+        	}
+
+        	this.router.go('/dashboard/analyze/a' + strategyId);
         },
 
-        goToClone() {
-        	this.router.go('/dashboard/analyze?strategyName=OLMAR')
+        goToClone(e) {
+        	strategyId = this._currentRow.id;
+
+        	for (i in this.strategies) {
+        		if(strategyId == this.strategies[i]._id) {
+        			e.detail["strategy"] = this.strategies[i]
+        			break;
+        		}
+        	}
+        	//Let the event propagate. It's handled in editor-main.   	
         },
 
         goToShare() {
-        	this.router.go('/dashboard/analyze?strategyName=OLMAR')
+        	strategyId = this._currentRow.id;
+        	this.router.go('/dashboard/community/create/'+strategyId+"?share=strategy");
         },
 
         goToEditor(e) {
-        	this.router.go('/dashboard/editor/'+e.detail.id);
+        	this.router.go('/dashboard/editor/' + e.detail.id);
         },
 
-        createStrategy(e) {
-        	console.log("here");
-        	this.strategyData = {
-        		"name":e.detail.name,
-        		"description":e.detail.description,
-        		"language":"python",
-        		"type": "string",
-		  		"code": "string",
-		  		"settings": {
-			 	   	"start": "2016-11-05T16:23:08.577Z",
-			   		"end": "2016-11-05T16:23:08.577Z",
-			    	"capital": 0,
-			    	"plan": "string"
-			  	}
-			};
-			
-        	
-        	this.$.postStrategy.generateRequest();
+        checkStrategy(e) {
+        	var checked = e.detail.checked;
+
+        	this.checkedItems[e.detail.id] = e.detail.checked;
+
+        	if (checked == true) {
+        		this.checkedCount += 1;
+        	} else {
+        		this.checkedCount -= 1;
+        	}
         },
 
-        onStrategyCreation(data) {
-        	var strategyId = data.detail.response._id
-        	this.router.go('/dashboard/editor/'+ strategyId)
+        hasCheckedStrategies(checkedCount) {
+        	return checkedCount > 0;
+        },
+
+        onDeletion() {
+        	//Send DELETE request to backend
+        	for (key in this.checkedItems) {
+        		for (i in this.strategies) {		
+        			if (key == this.strategies[i]._id && this.checkedItems[key]==true) {
+        				this.splice('strategies', i, 1);
+        				this.checkedCount -= 1;
+        			}
+        		}
+    		}
+
+    		this.checkedItems = {};	        	
         },
 
 	});
